some notebook rearranging

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -35,12 +35,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Check the size of the images"
+    "## Image Preprocessing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -87,8 +87,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 228 images belonging to 2 classes.\n",
+      "Found 570 images belonging to 2 classes.\n",
+      "Found 160 images belonging to 2 classes.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# reshape the images using Keras \n",
+    "\n",
+    "# get all the data in the directory split/test (230 images), and reshape them\n",
+    "test_generator = ImageDataGenerator(rescale=1./255).flow_from_directory('split/test/', \n",
+    "        target_size=(140, 100), batch_size = 230)\n",
+    "\n",
+    "# get all the data in the directory split/train (570 images), and reshape them\n",
+    "train_generator = ImageDataGenerator(rescale=1./255).flow_from_directory(\n",
+    "    'split/train/', \n",
+    "    target_size=(140, 100), batch_size=570)\n",
+    "\n",
+    "# get all the data in the directory split/validation (160 images), and reshape them\n",
+    "val_generator = ImageDataGenerator(rescale=1./255).flow_from_directory(\n",
+    "    'split/validation/', \n",
+    "    target_size=(140, 100), batch_size = 160)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# now we'll move on to creating the data sets w/ labels \n",
+    "train_images, train_labels = next(train_generator)\n",
+    "test_images, test_labels = next(test_generator)\n",
+    "val_images, val_labels = next(val_generator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -121,12 +168,14 @@
     "print (\"test_images shape: \" + str(test_images.shape))\n",
     "print (\"test_labels shape: \" + str(test_labels.shape))\n",
     "print (\"val_images shape: \" + str(val_images.shape))\n",
-    "print (\"val_labels shape: \" + str(val_labels.shape))"
+    "print (\"val_labels shape: \" + str(val_labels.shape))\n",
+    "\n",
+    "shuffle = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -140,6 +189,10 @@
     }
    ],
    "source": [
+    "train_img = train_images.reshape(train_images.shape[0], -1)\n",
+    "test_img = test_images.reshape(test_images.shape[0], -1)\n",
+    "val_img = val_images.reshape(val_images.shape[0], -1)\n",
+    "\n",
     "print(train_img.shape)\n",
     "print(test_img.shape)\n",
     "print(val_img.shape)"
@@ -147,142 +200,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Build a baseline fully connected model\n",
-    "np.random.seed(123)\n",
-    "model = models.Sequential()\n",
-    "model.add(layers.Dense(20, activation='relu', input_shape=(42000,))) # 2 hidden layers\n",
-    "model.add(layers.Dense(7, activation='relu'))\n",
-    "model.add(layers.Dense(5, activation='relu'))\n",
-    "model.add(layers.Dense(1, activation='sigmoid'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 570 samples, validate on 160 samples\n",
-      "Epoch 1/50\n",
-      "570/570 [==============================] - 1s 2ms/step - loss: 0.7457 - accuracy: 0.5000 - val_loss: 0.6927 - val_accuracy: 0.5938\n",
-      "Epoch 2/50\n",
-      "570/570 [==============================] - 0s 403us/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6927 - val_accuracy: 0.5938\n",
-      "Epoch 3/50\n",
-      "570/570 [==============================] - 0s 399us/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6927 - val_accuracy: 0.5938\n",
-      "Epoch 4/50\n",
-      "570/570 [==============================] - 0s 435us/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6928 - val_accuracy: 0.5938\n",
-      "Epoch 5/50\n",
-      "570/570 [==============================] - 0s 495us/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6928 - val_accuracy: 0.5938\n",
-      "Epoch 6/50\n",
-      "570/570 [==============================] - 0s 693us/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6928 - val_accuracy: 0.5938\n",
-      "Epoch 7/50\n",
-      "570/570 [==============================] - 0s 414us/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6929 - val_accuracy: 0.5938\n",
-      "Epoch 8/50\n",
-      "570/570 [==============================] - 0s 431us/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6929 - val_accuracy: 0.5938\n",
-      "Epoch 9/50\n",
-      "570/570 [==============================] - 0s 492us/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6930 - val_accuracy: 0.5938\n",
-      "Epoch 10/50\n",
-      "570/570 [==============================] - 0s 416us/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6930 - val_accuracy: 0.5938\n",
-      "Epoch 11/50\n",
-      "570/570 [==============================] - 0s 647us/step - loss: 0.6932 - accuracy: 0.4825 - val_loss: 0.6930 - val_accuracy: 0.5938\n",
-      "Epoch 12/50\n",
-      "570/570 [==============================] - 0s 471us/step - loss: 0.6932 - accuracy: 0.4719 - val_loss: 0.6930 - val_accuracy: 0.5938\n",
-      "Epoch 13/50\n",
-      "570/570 [==============================] - 0s 424us/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6930 - val_accuracy: 0.5938\n",
-      "Epoch 14/50\n",
-      "570/570 [==============================] - 0s 556us/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6930 - val_accuracy: 0.5938\n",
-      "Epoch 15/50\n",
-      "570/570 [==============================] - 0s 440us/step - loss: 0.6932 - accuracy: 0.4719 - val_loss: 0.6930 - val_accuracy: 0.5938\n",
-      "Epoch 16/50\n",
-      "570/570 [==============================] - 0s 566us/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6930 - val_accuracy: 0.5938\n",
-      "Epoch 17/50\n",
-      "570/570 [==============================] - 0s 420us/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6930 - val_accuracy: 0.5938\n",
-      "Epoch 18/50\n",
-      "570/570 [==============================] - 0s 461us/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6930 - val_accuracy: 0.5938\n",
-      "Epoch 19/50\n",
-      "570/570 [==============================] - 0s 579us/step - loss: 0.6932 - accuracy: 0.4860 - val_loss: 0.6930 - val_accuracy: 0.5938\n",
-      "Epoch 20/50\n",
-      "570/570 [==============================] - 0s 400us/step - loss: 0.6932 - accuracy: 0.4825 - val_loss: 0.6930 - val_accuracy: 0.5938\n",
-      "Epoch 21/50\n",
-      "570/570 [==============================] - 0s 421us/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6930 - val_accuracy: 0.5938\n",
-      "Epoch 22/50\n",
-      "570/570 [==============================] - 0s 436us/step - loss: 0.6932 - accuracy: 0.4579 - val_loss: 0.6930 - val_accuracy: 0.5938\n",
-      "Epoch 23/50\n",
-      "570/570 [==============================] - 0s 501us/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6930 - val_accuracy: 0.5938\n",
-      "Epoch 24/50\n",
-      "570/570 [==============================] - 0s 717us/step - loss: 0.6932 - accuracy: 0.4789 - val_loss: 0.6930 - val_accuracy: 0.5938\n",
-      "Epoch 25/50\n",
-      "570/570 [==============================] - 0s 414us/step - loss: 0.6932 - accuracy: 0.4895 - val_loss: 0.6930 - val_accuracy: 0.5938\n",
-      "Epoch 26/50\n",
-      "570/570 [==============================] - 0s 466us/step - loss: 0.6932 - accuracy: 0.4754 - val_loss: 0.6930 - val_accuracy: 0.5938\n",
-      "Epoch 27/50\n",
-      "570/570 [==============================] - 0s 574us/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6930 - val_accuracy: 0.5938\n",
-      "Epoch 28/50\n",
-      "570/570 [==============================] - 0s 573us/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6930 - val_accuracy: 0.5938\n",
-      "Epoch 29/50\n",
-      "570/570 [==============================] - 0s 600us/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6931 - val_accuracy: 0.5938\n",
-      "Epoch 30/50\n",
-      "570/570 [==============================] - 0s 483us/step - loss: 0.6932 - accuracy: 0.4579 - val_loss: 0.6931 - val_accuracy: 0.5938\n",
-      "Epoch 31/50\n",
-      "570/570 [==============================] - 0s 499us/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6931 - val_accuracy: 0.5938\n",
-      "Epoch 32/50\n",
-      "570/570 [==============================] - 0s 703us/step - loss: 0.6932 - accuracy: 0.4719 - val_loss: 0.6930 - val_accuracy: 0.5938\n",
-      "Epoch 33/50\n",
-      "570/570 [==============================] - 0s 457us/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6930 - val_accuracy: 0.5938\n",
-      "Epoch 34/50\n",
-      "570/570 [==============================] - 0s 449us/step - loss: 0.6932 - accuracy: 0.4719 - val_loss: 0.6930 - val_accuracy: 0.5938\n",
-      "Epoch 35/50\n",
-      "570/570 [==============================] - 0s 595us/step - loss: 0.6932 - accuracy: 0.4614 - val_loss: 0.6930 - val_accuracy: 0.5938\n",
-      "Epoch 36/50\n",
-      "570/570 [==============================] - 0s 465us/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6930 - val_accuracy: 0.5938\n",
-      "Epoch 37/50\n",
-      "570/570 [==============================] - 0s 489us/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6930 - val_accuracy: 0.5938\n",
-      "Epoch 38/50\n",
-      "570/570 [==============================] - 0s 436us/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6930 - val_accuracy: 0.5938\n",
-      "Epoch 39/50\n",
-      "570/570 [==============================] - 0s 551us/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6931 - val_accuracy: 0.5938\n",
-      "Epoch 40/50\n",
-      "570/570 [==============================] - 0s 521us/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6931 - val_accuracy: 0.5938\n",
-      "Epoch 41/50\n",
-      "570/570 [==============================] - 0s 600us/step - loss: 0.6932 - accuracy: 0.4930 - val_loss: 0.6931 - val_accuracy: 0.5938\n",
-      "Epoch 42/50\n",
-      "570/570 [==============================] - 0s 578us/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6931 - val_accuracy: 0.5938\n",
-      "Epoch 43/50\n",
-      "570/570 [==============================] - 0s 484us/step - loss: 0.6932 - accuracy: 0.4789 - val_loss: 0.6932 - val_accuracy: 0.4062\n",
-      "Epoch 44/50\n",
-      "570/570 [==============================] - 0s 426us/step - loss: 0.6932 - accuracy: 0.4930 - val_loss: 0.6932 - val_accuracy: 0.4062\n",
-      "Epoch 45/50\n",
-      "570/570 [==============================] - 0s 432us/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6932 - val_accuracy: 0.4062\n",
-      "Epoch 46/50\n",
-      "570/570 [==============================] - 0s 541us/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6931 - val_accuracy: 0.5938\n",
-      "Epoch 47/50\n",
-      "570/570 [==============================] - 0s 427us/step - loss: 0.6932 - accuracy: 0.4860 - val_loss: 0.6931 - val_accuracy: 0.5938\n",
-      "Epoch 48/50\n",
-      "570/570 [==============================] - 0s 466us/step - loss: 0.6932 - accuracy: 0.4614 - val_loss: 0.6931 - val_accuracy: 0.5938\n",
-      "Epoch 49/50\n",
-      "570/570 [==============================] - 0s 496us/step - loss: 0.6932 - accuracy: 0.5000 - val_loss: 0.6931 - val_accuracy: 0.5938\n",
-      "Epoch 50/50\n",
-      "570/570 [==============================] - 0s 501us/step - loss: 0.6932 - accuracy: 0.4930 - val_loss: 0.6931 - val_accuracy: 0.5938\n"
+      "(570, 1)\n",
+      "(228, 1)\n",
+      "(160, 1)\n"
      ]
     }
    ],
    "source": [
-    "model.compile(optimizer='sgd',\n",
-    "              loss='binary_crossentropy',\n",
-    "              metrics=['accuracy'])\n",
+    "train_y = np.reshape(train_labels[:,0], (570,1))\n",
+    "test_y = np.reshape(test_labels[:,0], (228,1))\n",
+    "val_y = np.reshape(val_labels[:,0], (160,1))\n",
     "\n",
-    "histoire = model.fit(train_img,\n",
-    "                    train_y,\n",
-    "                    epochs=50,\n",
-    "                    batch_size=32,\n",
-    "                    validation_data=(val_img, val_y))"
+    "print(train_y.shape)\n",
+    "print(test_y.shape)\n",
+    "print(val_y.shape)"
    ]
   },
   {
@@ -290,7 +228,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
   }
  ],
  "metadata": {
