--- a/HAB_Classification.ipynb
+++ b/HAB_Classification.ipynb
@@ -2,9 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Found 228 images belonging to 2 classes.\n",
+      "Found 570 images belonging to 2 classes.\n",
+      "Found 160 images belonging to 2 classes.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -18,7 +28,9 @@
     "import scipy\n",
     "from scipy import ndimage\n",
     "from keras.preprocessing.image import ImageDataGenerator, array_to_img, img_to_array, load_img\n",
-    "from data_cleaning import *"
+    "from data_cleaning import *\n",
+    "from keras import models\n",
+    "from keras import layers"
    ]
   }
  ],
